samples/_failures_safe/1761607455_6ee964_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1873069.c: In function ‘main’:
./samples/SAFE/__tmp_d1873069.c:168:16: error: missing terminating " character
  168 |         printf("Input error\n
      |                ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_d1873069.c:168:9: error: expected expression at end of input
  168 |         printf("Input error\n
      |         ^~~~~~
./samples/SAFE/__tmp_d1873069.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d1873069.c:168:9: error: expected declaration or statement at end of input
